Sec11_Chap124-XX: optimized code